Updating Spigot and Java versions